nav bar color changed

--- a/featuredworks.html
+++ b/featuredworks.html
@@ -69,7 +69,7 @@
       }
 
       .header a:hover {
-        color: red; /* temp color */
+        color: lightslategrey; 
       }
 
       .header a:active {
