--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       }
 
       .header a:hover {
-        color: red; /* temp color */
+        color:lightslategrey; 
       }
 
       .header a:active {
@@ -132,6 +132,7 @@
         /* padding: 1%; */
         background-color: whitesmoke;
         position: relative;
+        overflow: hidden;
       }
 
       .second-inner-block-title-1 {
@@ -155,6 +156,7 @@
         left: 45%;
         top: 50%;
         transform: translateY(-50%);
+        overflow: hidden;
       }
 
       .second-inner-block-title-2 {
@@ -179,6 +181,7 @@
         left: 3%;
         top: 50%;
         transform: translateY(-50%);
+        overflow: hidden;
       }
 
       p.second-block-text {
